# cs690-cave-surveying

./: .gitignore
arduino/continuous_servo/: continuous_servo.ino
arduino/hall_sensor_read/: hall_sensor_read.ino
arduino/lidarservorotary/: lidarservorotary.ino
arduino/measure_rpm_with_hall_sensor/: measure_rpm_with_hall_sensor.ino
arduino/measurements/: rpm.txt
arduino/read_serial_and_move_servos/: read_serial_and_move_servos.ino
arduino/rotary_encoder/: rotary_encoder.ino
arduino/rotary_encoder_and_servo/: rotary_encoder_and_servo.ino
arduino/sweep_servos/: sweep_servos.ino
arduino/sweep_servos_and_read_lidar/: sweep_servos_and_read_lidar.ino
client/: README_macos.txt  read_serial.py  sample.txt
readings/: HR411.pcd  HR411.txt  LSGInnovationWing.pcd  LSGTV.txt
visualization/: convert.py
visualization/cave_view/: CMakeLists.txt  Info.plist  duck.icns  fileloader.cpp  fileloader.h  greedyprojectiontriangulationparamsdialog.cpp  greedyprojectiontriangulationparamsdialog.h  greedyprojectiontriangulationparamsdialog.ui  icons.qrc  main.cpp  marchingcubesparamsdialog.cpp  marchingcubesparamsdialog.h  marchingcubesparamsdialog.ui  mlsparams.h  mlsparamsdialog.cpp  mlsparamsdialog.h  mlsparamsdialog.ui  params.cpp  params.h  paramsdialog.cpp  paramsdialog.h  paramsdialog.ui  paramsloader.cpp  paramsloader.h  pcl_visualizer.pro  pclviewer.cpp  pclviewer.h  pclviewer.ui  poissonparamsdialog.cpp  poissonparamsdialog.h  poissonparamsdialog.ui  xyzpoint.cpp  xyzpoint.h
visualization/convert/: convert.py  converted.pcd  countercorrect.py
visualization/data/: HR4Hallway.pcd  LSGInnovationWing.txt  LSGTV.pcd  apply.sh  shifter.py  sutro.pcd  sutro3.pcd  sutro3_shift3.pcd
visualization/pcd_viewer/: CMakeLists.txt
